<resources>
    <string name="app_name">Sisu</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Sisu">Sisu</string>
    <string name="No_Member">Not a member? Sign up</string>
    <string name= "Sign_up">Sign up</string>
    <string name="User_name">Username</string>
    <string name="register_cpassword">Confirm Password</string>


</resources>