<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_bg"
    tools:context=".Login">

    <ImageView
        android:id="@+id/bubble_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/circles" />

    <TextView
        android:id="@+id/sisu_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/Sisu"
        android:textColor="#FFD600"
        android:textColorHighlight="#FFD600"
        android:textColorHint="#FFD600"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />


    <EditText
        android:id="@+id/username_register"
        android:layout_width="378dp"
        android:layout_height="71dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/wallet"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/User_name"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="#FFD600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sisu_login"
        app:layout_constraintVertical_bias="0.063" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="378dp"
        android:layout_height="71dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="#FFD600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sisu_login"
        app:layout_constraintVertical_bias="0.227" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="378dp"
        android:layout_height="71dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_baseline_lock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="#FFD600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sisu_login"
        app:layout_constraintVertical_bias="0.393" />

    <EditText
        android:id="@+id/confirm_password_register"
        android:layout_width="378dp"
        android:layout_height="71dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_baseline_lock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/register_cpassword"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="#FFD600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sisu_login"
        app:layout_constraintVertical_bias="0.538" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:text="@string/Sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_register"
        app:layout_constraintVertical_bias="0.338" />


</androidx.constraintlayout.widget.ConstraintLayout>